; ModuleID = '/home/carl/AnghaBench/tig/src/extr_keys.c_get_keymap.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_keys.c_get_keymap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.keymap = type { i32 }

@keymaps = common dso_local global %struct.keymap* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.keymap* @get_keymap(i8* %0, i64 %1) #0 {
  %3 = alloca %struct.keymap*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %29, %2
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.keymap*, %struct.keymap** @keymaps, align 8
  %10 = call i32 @ARRAY_SIZE(%struct.keymap* %9)
  %11 = icmp slt i32 %8, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %7
  %13 = load %struct.keymap*, %struct.keymap** @keymaps, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.keymap, %struct.keymap* %13, i64 %15
  %17 = getelementptr inbounds %struct.keymap, %struct.keymap* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @strncasecmp(i32 %18, i8* %19, i64 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %28, label %23

23:                                               ; preds = %12
  %24 = load %struct.keymap*, %struct.keymap** @keymaps, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.keymap, %struct.keymap* %24, i64 %26
  store %struct.keymap* %27, %struct.keymap** %3, align 8
  br label %33

28:                                               ; preds = %12
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %7

32:                                               ; preds = %7
  store %struct.keymap* null, %struct.keymap** %3, align 8
  br label %33

33:                                               ; preds = %32, %23
  %34 = load %struct.keymap*, %struct.keymap** %3, align 8
  ret %struct.keymap* %34
}

declare dso_local i32 @ARRAY_SIZE(%struct.keymap*) #1

declare dso_local i32 @strncasecmp(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
